--- a/demo/visualization/build.html
+++ b/demo/visualization/build.html
@@ -2,10 +2,6 @@
 <meta charset="utf-8">
 <style>
 
-rect {
-    fill: #F3F3F3;
-}
-
 .link {
     stroke: #999;
 }
@@ -14,9 +10,12 @@ rect {
     stroke-width: 1.5px;
 }
 
-.node text {
-    pointer-events: none;
-    font: 10px sans-serif;
+.label {
+    font-family: "Droid Sans", "Tahoma", "sans-serif";
+}
+
+.back-img {
+    opacity: 0.25;
 }
 
 </style>
@@ -24,18 +23,27 @@ rect {
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
 
-var width = 1200;
-var height = 800;
+var width = 1300;
+var height = 600;
 var uuid = 0;
 var init_complete = false;
 
+/*
+// clarkKerr_simple_900_700.png
 var foci = [
-    {x: 200, y: 125},
-    {x: 200, y: 375},
-    {x: 500, y: 100},
-    {x: 500, y: 250},
-    {x: 500, y: 400},
-    {x: 800, y: 300}];
+    {x: 250, y: 175},
+    {x: 380, y: 390},
+    {x: 600, y: 175},
+    {x: 355, y: 700},
+    {x: 575, y: 620}];
+*/
+// clarkKerr_simple_1100_500.png
+var foci = [
+    {x: 250, y: 200},
+    {x: 440, y: 420},
+    {x: 600, y: 200},
+    {x: 875, y: 325},
+    {x: 1100, y: 200}];
 
 var select_color = d3.scale.category10();
 
@@ -57,14 +65,47 @@ var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
 
+var grad = svg.append("defs").append("radialGradient")
+        .attr("id", "label_gradient")
+
+grad.append("stop")
+    .attr("offset", "20%")
+    .attr("stop-color", "#FFFFFF")
+    .attr("stop-opacity", 0.8)
+
+grad.append("stop")
+    .attr("offset", "100%")
+    .attr("stop-color", "#FFFFFF")
+    .attr("stop-opacity", 0)
+
 svg.style("opacity", 1e-6)
     .transition()
     .duration(1000)
     .style("opacity", 1);
 
-svg.append("rect")
-    .attr("width", width)
-    .attr("height", height);
+/*
+svg.append("image")
+    .attr("class", "back-img")
+    .attr("xlink:href", 'clarkKerr_simple_1100_500.png')
+    .attr("x", 125)
+    .attr("y", 25)
+    .attr("width", 1100)
+    .attr("height", 500)
+    */
+svg.append("image")
+    .attr("class", "back-img")
+    .attr("xlink:href", 'clarkKerr_simple_1100_500.png')
+    .attr("x", 125)
+    .attr("y", 50)
+    .attr("width", 1100)
+    .attr("height", 500)
+
+svg.append("image")
+    .attr("xlink:href", "whereaboutsLogo.png")
+    .attr("width", 610)
+    .attr("height", 40)
+    .attr("x", 200)
+    .attr("y", 10)
 
 restart();
 
@@ -375,6 +416,7 @@ var superheros = [
     "Starfire",
     "Stargirl",
     "Star-Lord",
+    "Static Shock",
     "Storm",
     "Sub-Mariner",
     "Sunspot",
@@ -432,13 +474,16 @@ var i=0;
 for(i=0; i<75; i++) {
     add();
 }
+init_complete = true;
 
 function add() {
     addNode(superheros[(uuid-6)%superheros.length], -~~(Math.random()*70+30), ~~(Math.random()*center_nodes.length));
-    init_complete = true;
 }
 
-function kill() {
+function doStuff() {
+    removeNode(superheros[uuid-40]);
+    moveNode(superheros[uuid-10], ~~(Math.random()*70+30), ~~(Math.random()*center_nodes.length));
+    add();
 }
 // *****
 
@@ -451,15 +496,38 @@ function init_nodes( ) {
     }
 }
 
-
 function addNode(name, rssi, foci_id) {
-    //XXX: Perform some conversion on RSSI here based on room size
-    var node = {id: uuid, name: name, foci_id: foci_id};
-    var link = {source: node, target: center_nodes[foci_id], name: name, rssi: -rssi};
+    if (!init_complete) {
+        var node = {id: uuid, name: name, foci_id: foci_id};
+    } else {
+        var node = {id: uuid, x: foci[foci_id].x, y: foci[foci_id].y, name:name, foci_id: foci_id};
+    }
+    var link = {source: node, target: center_nodes[foci_id], name: name, rssi: convertRSSI(rssi)};
     uuid++;
 
     force.nodes().push(node);
     force.links().push(link);
+
+    restart();
+}
+
+function moveNode(name, rssi, foci_id) {
+    var nodes = force.nodes();
+    for (var i=0; i<nodes.length; i++) {
+        if (nodes[i].name == name) {
+            force.nodes()[i].foci_id = foci_id;
+            break;
+        }
+    }
+
+    var links = force.links();
+    for (var i=0; i<links.length; i++) {
+        if (links[i].name == name) {
+            force.links()[i].target = center_nodes[foci_id];
+            force.links()[i].rssi = convertRSSI(rssi);
+            break;
+        }
+    }
 
     restart();
 }
@@ -469,6 +537,7 @@ function removeNode(name) {
     for (var i=0; i<nodes.length; i++) {
         if (nodes[i]['name'] == name) {
             force.nodes().splice(i, 1);
+            break;
         }
     }
 
@@ -476,10 +545,15 @@ function removeNode(name) {
     for (var i=0; i<links.length; i++) {
         if (links[i]['name'] == name) {
             force.links().splice(i, 1);
+            break;
         }
     }
 
     restart();
+}
+
+function convertRSSI(rssi) {
+    return -rssi;
 }
 
 function tick(e) {
@@ -577,11 +651,12 @@ function restart() {
     node.enter().append("rect")
         .attr("class", "node")
         .attr("fill", function(d) {
-            if (!d.fixed) { return '#F3F3F3';}
+            if (!d.fixed) { return 'url(#label_gradient)'; }
             //if (!d.fixed) { return select_color(d.id); }
             else { return 'black'; }})
         .attr("stroke", function(d) {
-            if (!d.fixed) {return d3.rgb(select_color(d.id)).darker(2); }
+            if (!d.fixed) { return 'none'; }
+            //if (!d.fixed) {return d3.rgb(select_color(d.id)).darker(2); }
             else { return 'black'; }})
         .attr("width", 0)
         .attr("height", 0)
@@ -590,7 +665,7 @@ function restart() {
         .style("opacity", 0);
     text = svg.selectAll("text").data(force.nodes(), function(d) { return d.name; });
     text.enter().append("text")
-        .attr("font-family", "droid sans")
+        .attr("class", "label")
         .attr("font-size", "14px")
         .attr("text-anchor", "middle")
         .text(function(d) {
