--- a/demo/visualization/wearabouts_vis.html
+++ b/demo/visualization/wearabouts_vis.html
@@ -21,6 +21,7 @@
 </style>
 <body>
 <script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="socket.io.min.js"></script>
 <script>
 
 var width = 1300;
@@ -54,7 +55,7 @@ var force = d3.layout.force()
     .size([width, height])
     .nodes(center_nodes.slice(0)) // need to 
     .linkStrength(0.9)
-    .linkDistance(function(d) { return 1.2*d.rssi; })
+    .linkDistance(function(d) { return d.confidence; })
     .charge(-250)
     .chargeDistance(100)
     .gravity(0)
@@ -108,384 +109,18 @@ svg.append("image")
     .attr("y", 10)
 
 restart();
-
-// TESTING ONLY
-var superheros = [
-    "Abomination",
-    "Abraxas",
-    "Agent Zero",
-    "Air-Walker",
-    "Alfred Pennyworth",
-    "Amazo",
-    "Ammo",
-    "Angel",
-    "Animal Man",
-    "Annihilus",
-    "Ant-Man",
-    "Anti-Monitor",
-    "Anti-Spawn",
-    "Anti-Venom",
-    "Apocalypse",
-    "Aquababy",
-    "Aqualad",
-    "Aquaman",
-    "Arachne",
-    "Archangel",
-    "Ares",
-    "Arsenal",
-    "Astro Boy",
-    "Atlas",
-    "Atom",
-    "Atom Girl",
-    "Aurora",
-    "Azazel",
-    "Azrael",
-    "Aztar",
-    "Bane",
-    "Banshee",
-    "Batgirl",
-    "Batman",
-    "Battlestar",
-    "Beast",
-    "Beast Boy",
-    "Beetle",
-    "Beyonder",
-    "Binary",
-    "Birdman",
-    "Bishop",
-    "Bizarro",
-    "Black Adam",
-    "Black Canary",
-    "Black Cat",
-    "Black Goliath",
-    "Black Widow",
-    "Blackout",
-    "Blackwing",
-    "Blackwulf",
-    "Blade",
-    "Blink",
-    "Blizzard",
-    "Blob",
-    "Bloodhawk",
-    "Bloodwraith",
-    "Blue Beetle",
-    "Bolt",
-    "Boomer",
-    "Booster Gold",
-    "Brainiac",
-    "Bullseye",
-    "Bumblebee",
-    "Bumbleboy",
-    "Cable",
-    "Callisto",
-    "Captain America",
-    "Captain Atom",
-    "Captain Britain",
-    "Captain Canuck",
-    "Captain Planet",
-    "Carnage",
-    "Catwoman",
-    "Cerebra",
-    "Chameleon",
-    "Changeling",
-    "Cheetah",
-    "Chromos",
-    "Chuck Norris",
-    "Cloak",
-    "Colossal Boy",
-    "Colossus",
-    "Corsair",
-    "Crimson Crusader",
-    "Crimson Dynamo",
-    "Cyborg",
-    "Cyclops",
-    "Cypher",
-    "Dagger",
-    "Daredevil",
-    "Darkhawk",
-    "Darkman",
-    "Darkside",
-    "Darkstar",
-    "Dash",
-    "Dazzler",
-    "Deadman",
-    "Deadpool",
-    "Deadshot",
-    "Deathlok",
-    "Deathstroke",
-    "Doctor Doom",
-    "Doctor Fate",
-    "Doctor Octopus",
-    "Doctor Strange",
-    "Domino",
-    "Doomsday",
-    "Doppelganger",
-    "Dr. Manhattan",
-    "Ego",
-    "Elastigirl",
-    "Electro",
-    "Elektra",
-    "Elongated Man",
-    "Exodus",
-    "Falcon",
-    "Firebird",
-    "Firelord",
-    "Firestar",
-    "Fixer",
-    "Flash Gordon",
-    "Flash",
-    "Frenzy",
-    "Frigga",
-    "Galactus",
-    "Gambit",
-    "Garbage Man",
-    "General Zod",
-    "Genesis",
-    "Ghost Rider",
-    "Giant-Man",
-    "Giganta",
-    "Goblin Queen",
-    "Gog",
-    "Goliath",
-    "Granny Goodness",
-    "Green Arrow",
-    "Green Goblin",
-    "Groot",
-    "Guardian",
-    "Hancock",
-    "Harley Quinn",
-    "Havok",
-    "Hawkeye",
-    "Hawkgirl",
-    "Hawkman",
-    "Hawkwoman",
-    "Hellboy",
-    "Hellcat",
-    "Hellstorm",
-    "Hercules",
-    "Hit-Girl",
-    "Hobgoblin",
-    "Hollow",
-    "Hulk",
-    "Human Torch",
-    "Huntress",
-    "Husk",
-    "Hydro-Man",
-    "Hyperion",
-    "Iceman",
-    "Impulse",
-    "Ink",
-    "Invisible Woman",
-    "Iron Fist",
-    "Iron Monger",
-    "Ironman",
-    "Jean Grey",
-    "Jigsaw",
-    "Joker",
-    "Jolt",
-    "Jubilee",
-    "Juggernaut",
-    "Junkpile",
-    "Justice",
-    "Kang",
-    "Kid Flash",
-    "Killer Croc",
-    "Kingpin",
-    "Klaw",
-    "Kraven the Hunter",
-    "Krypto",
-    "Lady Bullseye",
-    "Lady Deathstrike",
-    "Leech",
-    "Lex Luthor",
-    "Light Lass",
-    "Lightning Lad",
-    "Lightning Lord",
-    "Living Brain",
-    "Lobo",
-    "Loki",
-    "Longshot",
-    "Luna",
-    "Magneto",
-    "Magog",
-    "Magus",
-    "Mandarin",
-    "Martian Manhunter",
-    "Match",
-    "Maverick",
-    "Maxima",
-    "Medusa",
-    "Meltdown",
-    "Mephisto",
-    "Metallo",
-    "Metamorpho",
-    "Meteorite",
-    "Metron",
-    "Micro Lad",
-    "Mimic",
-    "Misfit",
-    "Miss Martian",
-    "Mister Freeze",
-    "Moloch",
-    "Molten Man",
-    "Monarch",
-    "Moon Knight",
-    "Moonstone",
-    "Morph",
-    "Mr Incredible",
-    "Mysterio",
-    "Mystique",
-    "Namorita",
-    "Nick Fury",
-    "Nightcrawler",
-    "Nightwing",
-    "Nite Owl",
-    "Northstar",
-    "Nova",
-    "Offspring",
-    "Omega Red",
-    "Onslaught",
-    "Osiris",
-    "Penguin",
-    "Phantom",
-    "Phantom Girl",
-    "Phoenix",
-    "Plastic Lad",
-    "Plastic Man",
-    "Plastique",
-    "Poison Ivy",
-    "Power Girl",
-    "Power Man",
-    "Psylocke",
-    "Punisher",
-    "Pyro",
-    "Quantum",
-    "Quailman",
-    "Question",
-    "Quicksilver",
-    "Quill",
-    "Raven",
-    "Red Arrow",
-    "Red Hood",
-    "Red Hulk",
-    "Red Mist",
-    "Red Skull",
-    "Red Tornado",
-    "Redeemer",
-    "Rick Flag",
-    "Riddler",
-    "Ripcord",
-    "Robin",
-    "Rocket Raccoon",
-    "Rogue",
-    "Ronin",
-    "Rorschach",
-    "Sabretooth",
-    "Sage",
-    "Sandman",
-    "Sasquatch",
-    "Scarecrow",
-    "Scarlet Spider",
-    "Scarlet Witch",
-    "Scorpion",
-    "Sentry",
-    "Shadow King",
-    "Shadowcat",
-    "Shatterstar",
-    "She-Hulk",
-    "She-Thing",
-    "Shriek",
-    "Shrinking Violet",
-    "Sif",
-    "Silk Spectre",
-    "Silver Surfer",
-    "Silverclaw",
-    "Sinestro",
-    "Siren",
-    "Sobek",
-    "Solomon Grundy",
-    "Songbird",
-    "Space Ghost",
-    "Spawn",
-    "Spectre",
-    "Speedy",
-    "Spiderman",
-    "Spyke",
-    "Stardust",
-    "Starfire",
-    "Stargirl",
-    "Star-Lord",
-    "Static Shock",
-    "Storm",
-    "Sub-Mariner",
-    "Sunspot",
-    "Superboy",
-    "Supergirl",
-    "Superman",
-    "Swamp Thing",
-    "Synch",
-    "Tempest",
-    "Thanos",
-    "The Comedian",
-    "Thing",
-    "Thor",
-    "Thunderbird",
-    "Thunderstrike",
-    "Thundra",
-    "Tigra",
-    "Tinkerer",,
-    "Titan",
-    "Toad",
-    "Toxin",
-    "Trickster",
-    "Two-Face",
-    "Ultragirl",
-    "Ultron",
-    "Vagabond",
-    "Valkyrie",
-    "Vanisher",
-    "Venom",
-    "Vertigo",
-    "Vindicator",
-    "Vision",
-    "Vulcan",
-    "Vulture",
-    "War Machine",
-    "Warbird",
-    "Warlock",
-    "Warp",
-    "Warpath",
-    "Wasp",
-    "Watcher",
-    "Wildfire",
-    "Wiz Kid",
-    "Wolfsbane",
-    "Wolverine",
-    "Wondra",
-    "Yellow Claw",
-    "Yellowjacket",
-    "Zatanna",
-    "Zoom"];
-
-uuid = ~~(Math.random()*superheros.length);
-
-var i=0;
-for(i=0; i<75; i++) {
-    add();
-}
 init_complete = true;
 
-function add() {
-    addNode(superheros[(uuid-6)%superheros.length], -~~(Math.random()*70+30), ~~(Math.random()*center_nodes.length));
+var gatd_socket;
+onload = function() { 
+    gatd_socket = io.connect('inductor.eecs.umich.edu:8082/stream');
+    gatd_socket.on('connect', function(data) {
+        // query starting immediately
+        gatd_socket.emit('query', {'profile_id': '62MTxDGPhJ'});
+        });
+    gatd_socket.on('data', function(data) {
+            parse_data(data)});
 }
-
-function doStuff() {
-    removeNode(superheros[uuid-40]);
-    moveNode(superheros[uuid-10], ~~(Math.random()*70+30), ~~(Math.random()*center_nodes.length));
-    add();
-}
-// *****
-
 
 function init_nodes( ) {
     var i=0;
@@ -495,13 +130,45 @@ function init_nodes( ) {
     }
 }
 
-function addNode(name, rssi, foci_id) {
+function addOrUpdateNode(name, confidence, foci_id) {
+    var nodes = force.nodes();
+    node_index = -1;
+    for (var i=0; i<nodes.length; i++) {
+        if (nodes[i].name == name) {
+            node_index = i;
+            break;
+        }
+    }
+
+    if (node_index == -1) {
+        // node doens't exist and must be added
+        addNode(name, confidence, foci_id);
+        return;
+    }
+
+    // node exists and should be updated
+    force.nodes()[i].foci_id = foci_id;
+
+    var links = force.links();
+    for (var i=0; i<links.length; i++) {
+        if (links[i].name == name) {
+            force.links()[i].target = center_nodes[foci_id];
+            force.links()[i].confidence = convertConfidence(confidence);
+            break;
+        }
+    }
+
+    restart();
+}
+
+
+function addNode(name, confidence, foci_id) {
     if (!init_complete) {
         var node = {id: uuid, name: name, foci_id: foci_id};
     } else {
         var node = {id: uuid, x: foci[foci_id].x, y: foci[foci_id].y, name:name, foci_id: foci_id};
     }
-    var link = {source: node, target: center_nodes[foci_id], name: name, rssi: convertRSSI(rssi)};
+    var link = {source: node, target: center_nodes[foci_id], name: name, confidence: convertConfidence(confidence)};
     uuid++;
 
     force.nodes().push(node);
@@ -510,7 +177,7 @@ function addNode(name, rssi, foci_id) {
     restart();
 }
 
-function moveNode(name, rssi, foci_id) {
+function moveNode(name, confidence, foci_id) {
     var nodes = force.nodes();
     for (var i=0; i<nodes.length; i++) {
         if (nodes[i].name == name) {
@@ -523,7 +190,7 @@ function moveNode(name, rssi, foci_id) {
     for (var i=0; i<links.length; i++) {
         if (links[i].name == name) {
             force.links()[i].target = center_nodes[foci_id];
-            force.links()[i].rssi = convertRSSI(rssi);
+            force.links()[i].confidence = convertConfidence(confidence);
             break;
         }
     }
@@ -533,11 +200,18 @@ function moveNode(name, rssi, foci_id) {
 
 function removeNode(name) {
     var nodes = force.nodes();
+    var node_index = -1;
     for (var i=0; i<nodes.length; i++) {
         if (nodes[i]['name'] == name) {
             force.nodes().splice(i, 1);
+            node_index = i;
             break;
         }
+    }
+
+    // node doesn't exist, stop bothering
+    if (node_index == -1) {
+        return;
     }
 
     var links = force.links();
@@ -551,8 +225,19 @@ function removeNode(name) {
     restart();
 }
 
-function convertRSSI(rssi) {
-    return -rssi;
+function nodeExists(name) {
+    var nodes = force.nodes();
+    for (var i=0; i<nodes.length; i++) {
+        if (nodes[i].name == name) {
+            return true;
+        }
+    }
+
+    return false;
+}
+
+function convertConfidence(confidence) {
+    return 1.0*(confidence*100);
 }
 
 function tick(e) {
@@ -693,6 +378,21 @@ function restart() {
 
 
     force.start();
+}
+
+function parse_data(data) {
+    name = data['full_name'];
+    confidence = data['confidence'];
+    location_id = data['location_id'];
+
+    // see if the node is in location 'None'
+    if (location_id == -1) {
+        // remove the node if it exists
+        removeNode(name);
+    } else {
+        // add the node or update it if it exists
+        addOrUpdateNode(name, confidence, location_id);
+    }
 }
 
 </script>
