--- a/demo/visualization/wearabouts_vis.html
+++ b/demo/visualization/wearabouts_vis.html
@@ -93,6 +93,7 @@ svg.append("image")
     .attr("width", 1100)
     .attr("height", 500)
     */
+//XXX: look at leaderboard for automatic resizing
 svg.append("image")
     .attr("class", "back-img")
     .attr("xlink:href", 'clarkKerr_simple_1100_500.png')
